fixed ipv4 network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,11 @@ version: "3.9"
 networks:
   backend:
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.20.0.0/24
+          gateway: 172.20.0.1
 
 volumes:
   mariadb:
