--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,3 +112,11 @@ services:
       - backend
     depends_on:
       - teamspeak
+
+  watchtower:
+    image: containrrr/watchtower
+    environment:
+      WATCHTOWER_SCHEDULE: "0 0 6 * * *"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/etc/localtime:/etc/localtime:ro"
