--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
       - '80:80'
       # Public HTTPS Port:
       - '443:443'
-      # Admin Web Port:
-      - '81:81'
+      # Admin Web Port (accessible via NPM #loop):
+      # - '81:81'
       # Add any other Stream port you want to expose
       # - '21:21' # FTP
     environment:
