--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ volumes:
   ts3data:
   changedetection-data:
   healthchecks-data:
+  hedgedoc-data:
 
 services:
   db:
@@ -162,7 +163,7 @@ services:
     environment:
       - SITE_ROOT=https://hc.tobsa.dev
       - SITE_NAME=TobsA.WTF Healthcheck
-      - ALLOWED_HOSTS=["hc.tobsa.dev","hc.tobsa.wtf"]
+      - ALLOWED_HOSTS=["hc.tobsa.dev"]
       - SUPERUSER_EMAIL=hc@tobsa.wtf
       - REGISTRATION_OPEN=False
       - DEBUG=False
@@ -171,3 +172,32 @@ services:
       - healthchecks-data:/config
     networks:
       - backend
+
+  hedgedoc:
+    container_name: hedgedoc
+    # Make sure to use the latest release from https://hedgedoc.org/latest-release
+    image: quay.io/hedgedoc/hedgedoc:1.9.3
+    restart: unless-stopped
+    environment:
+      - CMD_DB_URL=mysql://hedgedoc:hedgedoc@db:3306/hedgedoc
+      - CMD_DOMAIN=pad.tobsa.wtf
+      - CMD_URL_ADDPORT=false
+      - CMD_ALLOW_ANONYMOUS=false
+      - CMD_DEFAULT_PERMISSION=private
+      - CMD_EMAIL=false
+      - CMD_ALLOW_EMAIL_REGISTER=False
+      - CMD_OAUTH2_AUTHORIZATION_URL=https://cloud.tobsa.wtf/apps/oauth2/authorize
+      - CMD_OAUTH2_TOKEN_URL=https://cloud.tobsa.wtf/apps/oauth2/api/v1/token
+      - CMD_OAUTH2_USER_PROFILE_URL=https://cloud.tobsa.wtf/ocs/v2.php/cloud/user?format=json
+      - CMD_OAUTH2_USER_PROFILE_USERNAME_ATTR=ocs.data.id
+      - CMD_OAUTH2_USER_PROFILE_DISPLAY_NAME_ATTR=ocs.data.display-name
+      - CMD_OAUTH2_USER_PROFILE_EMAIL_ATTR=ocs.data.email
+      #Secrets in hedgedoc.env
+    env_file:
+      - hedgedoc.env
+    volumes:
+      - hedgedoc-data:/hedgedoc/public/uploads
+    networks:
+      - backend
+    depends_on:
+      - db
