--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,6 +181,7 @@ services:
     environment:
       - CMD_DB_URL=mysql://hedgedoc:hedgedoc@db:3306/hedgedoc
       - CMD_DOMAIN=pad.tobsa.wtf
+      - CMD_PROTOCOL_USESSL=true
       - CMD_URL_ADDPORT=false
       - CMD_ALLOW_ANONYMOUS=false
       - CMD_DEFAULT_PERMISSION=private
