--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -208,7 +208,7 @@ services:
     image: restic/rest-server:latest
     restart: unless-stopped
     environment:
-      - OPTIONS="--append-only --private-repos"
+      - OPTIONS=--append-only --private-repos
     volumes:
       - /mnt/restic_backup:/data
     networks:
