--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -185,6 +185,7 @@ services:
       - CMD_PROTOCOL_USESSL=true
       - CMD_URL_ADDPORT=false
       - CMD_ALLOW_ANONYMOUS=false
+      - CMD_ALLOW_ANONYMOUS_EDITS=true
       - CMD_DEFAULT_PERMISSION=private
       - CMD_EMAIL=false
       - CMD_ALLOW_EMAIL_REGISTER=False
