--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ volumes:
   healthchecks-data:
   hedgedoc-data:
   privatebin-data:
+  pihole-data:
+  pihole-dnsmasq:
 
 services:
   db:
@@ -213,5 +215,20 @@ services:
     volumes:
       - privatebin-data:/srv/data
       - ./privatebin_conf:/srv/cfg/conf.php:ro
+    networks:
+      - backend
+
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:latest
+    restart: unless-stopped
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+    environment:
+      TZ: 'Europe/Berlin'
+    volumes:
+      - 'pihole-data:/etc/pihole'
+      - 'pihole-dnsmasq:/etc/dnsmasq.d'
     networks:
       - backend
