--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ networks:
 
 volumes:
   mariadb:
+  mongodb:
   npm_data:
   npm_letsencrypt:
   ts3data:
@@ -23,6 +24,7 @@ volumes:
   unifi-data:
   gotify-data:
   traefik-certs-data:
+  heimdall-data:
 
 services:
   traefik:
@@ -61,7 +63,6 @@ services:
   db:
     container_name: db
     image: 'mariadb:10'
-    restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
     networks:
@@ -69,6 +70,17 @@ services:
     volumes:
       - "mariadb:/var/lib/mysql"
       - "/etc/localtime:/etc/localtime:ro"
+
+  mongodb:
+    container_name: mongodb
+    image: mongo:6
+    restart: unless-stopped
+    environment:
+      - TZ=Europe/Berlin
+    networks:
+      - backend
+    volumes:
+      - mongodb:/data/db
 
   phpmyadmin:
     container_name: phpmyadmin
@@ -159,7 +171,7 @@ services:
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
       - "traefik.enable=true"
-      - "traefik.http.routers.web-vpn.rule=Host(`tobsa.dev`)"
+      - "traefik.http.routers.web-vpn.rule=Host(`web.tobsa.dev`)"
       - "traefik.http.routers.web-vpn.entrypoints=websecure"
       - "traefik.http.routers.web-vpn.middlewares=vpn-whitelist@file"
       - "traefik.http.routers.web-vpn.tls=true"
@@ -319,9 +331,11 @@ services:
       - "traefik.http.services.pihole.loadbalancer.server.port=80"
       - "traefik.http.routers.pihole.rule=Host(`pihole.tobsa.dev`)"
       - "traefik.http.routers.pihole.entrypoints=websecure"
-      - "traefik.http.routers.pihole.middlewares=vpn-whitelist@file, pihole-path@docker"
+      - "traefik.http.routers.pihole.middlewares=vpn-whitelist@file"
       - "traefik.http.routers.pihole.tls=true"
-      - "traefik.http.middlewares.pihole-path.addprefix.prefix=/admin"
+      - "traefik.http.middlewares.pihole-redirectregex.redirectregex.regex=/admin/$$"
+      - "traefik.http.middlewares.pihole-redirectregex.redirectregex.replacement=/"
+      - "traefik.http.middlewares.pihole-addprefix.addprefix.prefix=/admin"
     networks:
       - backend
 
@@ -361,5 +375,64 @@ services:
       - "traefik.http.routers.gotify.rule=Host(`push.tobsa.dev`) || Host(`push.tobsa.wtf`)"
       - "traefik.http.routers.gotify.entrypoints=websecure"
       - "traefik.http.routers.gotify.tls=true"
+    networks:
+      - backend
+
+  spotify-worker:
+    container_name: spotify-worker
+    image: yooooomi/your_spotify_server
+    restart: unless-stopped
+    depends_on:
+      - mongodb
+    environment:
+      - TZ=Europe/Berlin
+      - API_ENDPOINT=https://spotify-backend.tobsa.wtf
+      - CLIENT_ENDPOINT=https://spotify.tobsa.wtf
+      - MONGO_ENDPOINT=mongodb://mongodb:27017/your_spotify
+      - SPOTIFY_PUBLIC=${SPOTIFY_PUBLIC}
+      - SPOTIFY_SECRET=${SPOTIFY_SECRET}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.spotify_worker.loadbalancer.server.port=8080"
+      - "traefik.http.routers.spotify_worker.rule=Host(`spotify-backend.tobsa.wtf`)"
+      - "traefik.http.routers.spotify_worker.entrypoints=websecure"
+      - "traefik.http.routers.spotify_worker.tls=true"
+    networks:
+      - backend
+
+  spotify-frontend:
+    container_name: spotify-frontend
+    image: yooooomi/your_spotify_client
+    restart: unless-stopped
+    environment:
+      - TZ=Europe/Berlin
+      - API_ENDPOINT=https://spotify-backend.tobsa.wtf
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.spotify_frontend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.spotify_frontend.rule=Host(`spotify.tobsa.wtf`)"
+      - "traefik.http.routers.spotify_frontend.entrypoints=websecure"
+      - "traefik.http.routers.spotify_frontend.tls=true"
+    networks:
+      - backend
+
+  heimdall:
+    container_name: heimdall
+    image: lscr.io/linuxserver/heimdall:latest
+    restart: unless-stopped
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    volumes:
+      - heimdall-data:/config
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.heimdall.loadbalancer.server.port=443"
+      - "traefik.http.services.heimdall.loadbalancer.server.scheme=https"
+      - "traefik.http.routers.heimdall.rule=Host(`tobsa.dev`)"
+      - "traefik.http.routers.heimdall.middlewares=vpn-whitelist@file"
+      - "traefik.http.routers.heimdall.entrypoints=websecure"
+      - "traefik.http.routers.heimdall.tls=true"
     networks:
       - backend
